--- a/CMS-USER-FRONTEND/public/style.css
+++ b/CMS-USER-FRONTEND/public/style.css
@@ -210,3 +210,28 @@
 .alertText {
     margin-top: 10px;
 }
+
+.alert-container {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fcaeae;
+    padding: 20px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .alert-content {
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .close-btn {
+    cursor: pointer;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+  }
