--- a/CMS-USER-FRONTEND/public/style.css
+++ b/CMS-USER-FRONTEND/public/style.css
@@ -211,6 +211,27 @@
     margin-top: 10px;
 }
 
+.alert-overlay-loding {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    /* Semi-transparent background */
+    z-index: 999;
+    /* Higher z-index to appear on top of other elements */
+}
+.alert-loding {
+    background: rgba(11, 11, 11, 0.594);
+    color: black;
+    padding: 20px;
+    border-radius: 25px;
+    border-color: #155724;
+}
 .alert-container {
     position: fixed;
     top: 30%;
